Git Tests/force-app/main/default/default/objects/LogIntegration__c/LogIntegration__c.object-meta.xml
<CustomObject>
    <label>Log de Integração</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Nome de Log de Integração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log das Integrações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>