Git Tests/force-app/main/default/default/objects/LogIntegration__c/fields/HTTPStatusCode__c.field-meta.xml
<CustomField>
    <fullName>HTTPStatusCode__c</fullName>
    <label>HTTP Status Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>