Git Tests/force-app/main/default/default/objects/LogIntegration__c/fields/LongEndpoint__c.field-meta.xml
<CustomField>
    <fullName>LongEndpoint__c</fullName>
    <label>Long Endpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>