Git Tests/force-app/main/default/default/objects/LogIntegration__c/fields/PayloadIN__c.field-meta.xml
<CustomField>
    <fullName>PayloadIN__c</fullName>
    <label>Payload IN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>