Git Tests/force-app/main/default/default/objects/LogIntegration__c/fields/Reserva__c.field-meta.xml
<CustomField>
    <fullName>Reserva__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reserva referente ao log de integração.</description>
    <inlineHelpText>Reserva referente ao log de integração.</inlineHelpText>
    <label>Reserva</label>
    <referenceTo>Reserva__c</referenceTo>
    <relationshipLabel>Log das Integrações</relationshipLabel>
    <relationshipName>LogIntegracaoReserva</relationshipName>
    <type>Lookup</type>
</CustomField>