Git Tests/force-app/main/default/default/objects/LogIntegration__c/fields/StatusIconFormula__c.field-meta.xml
<CustomField>
    <fullName>StatusIconFormula__c</fullName>
    <formula>IF( ISPICKVAL(Status__c , &quot;SUCCESS&quot;), IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;SUCCESS&quot;), 
IF( ISPICKVAL(Status__c , &quot;ERROR&quot;) , IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;ERROR&quot;), 
&quot;&quot;
) 
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>