Git Tests/force-app/main/default/default/objects/LogIntegration__c/recordTypes/Chatbot.recordType-meta.xml
<RecordType>
    <fullName>Chatbot</fullName>
    <active>true</active>
    <label>Chat bot</label>
</RecordType>