Git Tests/force-app/main/default/default/objects/LogIntegration__c/listViews/IntegracoesOutbound.listView-meta.xml
<ListView>
    <fullName>IntegracoesOutbound</fullName>
    <columns>NAME</columns>
    <columns>Integration__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Endpoint__c</columns>
    <columns>HTTPStatusCode__c</columns>
    <columns>StatusIconFormula__c</columns>
    <columns>HasAttachment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LogIntegration__c.Outbound</value>
    </filters>
    <label>Integrações Outbound</label>
</ListView>