Git Tests/force-app/main/default/default/objects/LogIntegration__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Integration__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Endpoint__c</columns>
    <columns>HTTPStatusCode__c</columns>
    <columns>StatusIconFormula__c</columns>
    <columns>HasAttachment__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>